deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
spec:
  selector:
    matchLabels:
      app: audit-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: octopub-audits
          image: octopussamples/octopub-audit-microservice:0.1.167
          ports:
            - name: http
              containerPort: 10000
          resources:
            limits:
              memory: 1024Mi
              cpu: "500m"
            requests:
              memory: 512Mi
              cpu: "250m"
