service.yml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  selector:
    app: audit-service
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
