ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audits-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: internal-development.octopussamples.com
    http:
      paths:
      - path: /api/audits/
        pathType: Prefix
        backend:
          service:
            name: audit-service
            port:
              name: http
      - path: /health/audits/
        pathType: Prefix
        backend:
          service:
            name: audit-service
            port:
              name: http
